--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -18,11 +18,11 @@
 	}
 
 #masthead {
-  background: none repeat scroll 0 0 #45ac9d;
+  background: none repeat scroll 0 0 red;
 }
 
 .button {
-	background: #45ac9d;
+	background: red;
 }
 
 /*BLOG POST STYLES*/
